added: slider, footer and cta blocks

--- a/nft/index.html
+++ b/nft/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230117234213">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230120001631">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
 
 <body>
 	<div class="wrapper">
-		<header data-scroll data-scroll-show="1000" class="header">
+		<header data-scroll data-scroll-show="10000" class="header">
 			<div class="header__container">
 				<a href="" class="header__logo">
 					<img src="img/icons/logo.svg" alt="Logo" />
@@ -80,19 +80,192 @@
 					</div>
 					<div class="main-page__image-ibg">
 						<picture><source srcset="img/main-page/01.webp" type="image/webp"><img src="img/main-page/01.png" alt="Photo" /></picture>
-						<a href="" class="main-page__play _icon-play">
-							<!-- <span class="_icon-play"></span> -->
-						</a>
+						<a href="" class="main-page__play _icon-play"> </a>
 					</div>
 				</div>
 			</section>
+			<section class="page__categories categories">
+				<div class="categories__container">
+					<h2 class="categories__title">popular categories</h2>
+					<div class="categories__body">
+						<!-- Оболонка слайдера -->
+						<div class="categories__slider swiper">
+							<!-- Частина слайдера, що рухається -->
+							<div class="categories__wrapper swiper-wrapper">
+								<!-- Слайд -->
+								<div class="categories__slide swiper-slide slide-categories">
+									<div class="slide-categories__body">
+										<div class="slide-categories__image">
+											<picture><source srcset="img/categories/01.webp" type="image/webp"><img src="img/categories/01.png" alt="image" /></picture>
+										</div>
+										<h3 class="slide-categories__heading">Games</h3>
+									</div>
+								</div>
+								<!-- Слайд -->
+								<div class="categories__slide swiper-slide slide-categories">
+									<div class="slide-categories__body">
+										<div class="slide-categories__image">
+											<picture><source srcset="img/categories/02.webp" type="image/webp"><img src="img/categories/02.png" alt="image" /></picture>
+										</div>
+										<h3 class="slide-categories__heading">Sports</h3>
+									</div>
+								</div>
+								<!-- Слайд -->
+								<div class="categories__slide swiper-slide slide-categories">
+									<div class="slide-categories__body">
+										<div class="slide-categories__image">
+											<picture><source srcset="img/categories/03.webp" type="image/webp"><img src="img/categories/03.png" alt="image" /></picture>
+										</div>
+										<h3 class="slide-categories__heading">Metaverse</h3>
+									</div>
+								</div>
+								<!-- Слайд -->
+								<div class="categories__slide swiper-slide slide-categories">
+									<div class="slide-categories__body">
+										<div class="slide-categories__image">
+											<picture><source srcset="img/categories/04.webp" type="image/webp"><img src="img/categories/04.png" alt="image" /></picture>
+										</div>
+										<h3 class="slide-categories__heading">Art</h3>
+									</div>
+								</div>
+								<!-- Слайд -->
+								<div class="categories__slide swiper-slide slide-categories">
+									<div class="slide-categories__body">
+										<div class="slide-categories__image">
+											<picture><source srcset="img/categories/05.webp" type="image/webp"><img src="img/categories/05.png" alt="image" /></picture>
+										</div>
+										<h3 class="slide-categories__heading">Music</h3>
+									</div>
+								</div>
+								<!-- Слайд -->
+								<div class="categories__slide swiper-slide slide-categories">
+									<div class="slide-categories__body">
+										<div class="slide-categories__image">
+											<picture><source srcset="img/categories/06.webp" type="image/webp"><img src="img/categories/06.png" alt="image" /></picture>
+										</div>
+										<h3 class="slide-categories__heading">Photography</h3>
+									</div>
+								</div>
+								<!-- Слайд -->
+								<div class="categories__slide swiper-slide slide-categories">
+									<div class="slide-categories__body">
+										<div class="slide-categories__image">
+											<picture><source srcset="img/categories/01.webp" type="image/webp"><img src="img/categories/01.png" alt="image" /></picture>
+										</div>
+										<h3 class="slide-categories__heading">Games</h3>
+									</div>
+								</div>
+								<!-- Слайд -->
+								<div class="categories__slide swiper-slide slide-categories">
+									<div class="slide-categories__body">
+										<div class="slide-categories__image">
+											<picture><source srcset="img/categories/01.webp" type="image/webp"><img src="img/categories/01.png" alt="image" /></picture>
+										</div>
+										<h3 class="slide-categories__heading">Games</h3>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- Якщо потрібна пагінація -->
+						<div class="swiper-pagination categories__pagination"></div>
+						<div class="categories__arrows">
+							<button type="button" class="categories__arrow categories__arrow--left _icon-arrow"></button>
+							<button type="button" class="categories__arrow categories__arrow--right _icon-arrow"></button>
+						</div>
+					</div>
+				</div>
+			</section>
+			<div class="page__cta cta">
+				<div class="cta__container">
+					<div class="cta__body">
+						<div class="cta__text">Download Qeeb app to track your NFT portfolio and discover more</div>
+						<div class="cta__actions">
+							<a href="#" class="cta__link _icon-apple">App Store</a>
+							<a href="#" class="cta__link _icon-android">Google Play</a>
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
+				<div data-spollers="650" class="footer__body">
+					<div class="footer__column">
+						<a href="" class="footer__logo">
+							<img src="img/icons/logo.svg" class="footer__logo" alt="Logo" />
+						</a>
+					</div>
+					<div class="footer__column">
+						<button type="button" data-spoller class="footer__title">Quick Links</button>
+						<nav class="footer__menu">
+							<ul class="footer__list">
+								<li class="footer__item">
+									<a href="" class="footer__link">About us</a>
+								</li>
+								<li class="footer__item">
+									<a href="" class="footer__link">Services</a>
+								</li>
+								<li class="footer__item">
+									<a href="" class="footer__link">API</a>
+								</li>
+								<li class="footer__item">
+									<a href="" class="footer__link">Become a Partner</a>
+								</li>
+								<li class="footer__item">
+									<a href="" class="footer__link">Branding</a>
+								</li>
+								<li class="footer__item">
+									<a href="" class="footer__link">Career</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+					<div class="footer__column">
+						<button type="button" data-spoller class="footer__title">Marketplace</button>
+						<nav class="footer__menu">
+							<ul class="footer__list">
+								<li class="footer__item">
+									<a href="" class="footer__link">Explore</a>
+								</li>
+								<li class="footer__item">
+									<a href="" class="footer__link">How it works</a>
+								</li>
+								<li class="footer__item">
+									<a href="" class="footer__link">Insights</a>
+								</li>
+								<li class="footer__item">
+									<a href="" class="footer__link">Help Center</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+					<div class="footer__column footer-form">
+						<h3 class="footer-form__name">Sign Up to Receive Updates Services</h3>
+						<form class="footer-form__form" action="files/sendmail/sendmail.php" method="POST">
+							<label class="footer-form__label" for="01">youremail@gmail.com</label>
+							<input id="01" type="text" name="form[email]" data-error="Error" class="input" />
+							<button type="submit" class="_icon-arrow-send footer-form__button"></button>
+						</form>
+					</div>
+				</div>
+				<div class="footer__privacy privacy">
+					<div class="privacy__qeeb">Qeeb 2022. All Rights Reserved</div>
+					<a href="" class="privacy__terms">Terms & Conditions Privacy</a>
+					<div class="privacy__social">
+						<a href="" class="privacy__link _icon-twitter"></a>
+						<a href="" class="privacy__link _icon-facebook"></a>
+						<a href="" class="privacy__link _icon-instagram"></a>
+						<a href="" class="privacy__link _icon-linkedin"></a>
+						<a href="" class="privacy__link _icon-tiktok"></a>
+						<a href="" class="privacy__link _icon-youtube"></a>
+					</div>
+					<div class="privacy__copy">Copyright 2022. All Rights Reserved</div>
+				</div>
 			</div>
 		</footer>
+
 	</div>
-	<script src="js/app.min.js?_v=20230117234213"></script>
+	<script src="js/app.min.js?_v=20230120001631"></script>
 </body>
 
 </html>
