create: new bloks

--- a/nft/index.html
+++ b/nft/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-	<title>HomePage</title>
+	<title>NFT Marketplace</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230120002240">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230122224402">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,7 +37,7 @@
 		</header>
 
 		<main class="page">
-			<section class="page-main main-page">
+			<section class="page__main main-page">
 				<div class="main-page__container">
 					<div class="main-page__body body-page">
 						<div class="body-page__name name-page">
@@ -175,6 +175,219 @@
 					</div>
 				</div>
 			</section>
+			<secction class="page__collections collections">
+				<div class="collections__container">
+					<div class="collections__row">
+						<div class="collections__col-lg-12">
+							<div class="collections__box-menu">
+								<ul class="collections__list">
+									<li class="collections__item" data-filter=".seven-days">7 Days</li>
+									<li class="collections__item" data-filter=".thirty-days">30 Days</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="collections__row box-list">
+						<article class="col-lg-3 mix box-item seven-days">
+							<div class="mix__image">
+								<picture><source srcset="img/collections/01.webp" type="image/webp"><img src="img/collections/01.png" alt="Image" /></picture>
+								<span>1</span>
+							</div>
+							<div class="mix__body">
+								<div class="mix__info">
+									<h3 class="mix__title">NFT Worlds</h3>
+									<span class="mix__desc">Floor: 0.80ETH</span>
+								</div>
+								<div class="mix__info-price">
+									<div class="mix__value">5.8k ETH</div>
+									<div class="mix__price">$8.4M</div>
+									<div class="mix__percent">+294.7%</div>
+								</div>
+							</div>
+						</article>
+					</div>
+				</div>
+			</secction>
+			<section class="page__tranding tranding">
+				<div class="tranding__container">
+					<h2 class="tranding__title">Tranding nfts</h2>
+					<div class="tranding__body">
+						<!-- Оболонка слайдера -->
+						<div class="tranding__slider swiper">
+							<!-- Частина слайдера, що рухається -->
+							<div class="tranding__wrapper swiper-wrapper">
+								<!-- Слайд -->
+								<div class="tranding__slide swiper-slide slide-tranding">
+									<div class="slide-tranding__image-ibg">
+										<picture><source srcset="img/tranding-nft/01.webp" type="image/webp"><img src="img/tranding-nft/01.png" alt="Photo" /></picture>
+									</div>
+									<div class="slide-tranding__body">
+										<h3 class="slide-tranding__title">Rare Crypto</h3>
+										<div class="slide-tranding__description">#QA5200 The Kive</div>
+										<div class="slide-tranding__price price-tranding">
+											<div class="price-tranding__column">
+												<h4 class="price-tranding__title">Price</h4>
+												<span class="price-tranding__value">0.03 ETH</span>
+											</div>
+											<div class="price-tranding__column">
+												<h4 class="price-tranding__title">Highest Bid</h4>
+												<span class="price-tranding__value">0.07 ETH</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<!-- Слайд -->
+								<div class="tranding__slide swiper-slide slide-tranding">
+									<div class="slide-tranding__image-ibg">
+										<picture><source srcset="img/tranding-nft/02.webp" type="image/webp"><img src="img/tranding-nft/02.png" alt="Photo" /></picture>
+									</div>
+									<div class="slide-tranding__body">
+										<h3 class="slide-tranding__title">Kive Boy</h3>
+										<div class="slide-tranding__description">#QA5200 The Kive</div>
+										<div class="slide-tranding__price price-tranding">
+											<div class="price-tranding__column">
+												<h4 class="price-tranding__title">Price</h4>
+												<span class="price-tranding__value">0.03 ETH</span>
+											</div>
+											<div class="price-tranding__column">
+												<h4 class="price-tranding__title">Highest Bid</h4>
+												<span class="price-tranding__value">0.07 ETH</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<!-- Слайд -->
+								<div class="tranding__slide swiper-slide slide-tranding">
+									<div class="slide-tranding__image-ibg">
+										<picture><source srcset="img/tranding-nft/03.webp" type="image/webp"><img src="img/tranding-nft/03.png" alt="Photo" /></picture>
+									</div>
+									<div class="slide-tranding__body">
+										<h3 class="slide-tranding__title">Kive Boy</h3>
+										<div class="slide-tranding__description">#QA5200 The Kive</div>
+										<div class="slide-tranding__price price-tranding">
+											<div class="price-tranding__column">
+												<h4 class="price-tranding__title">Price</h4>
+												<span class="price-tranding__value">0.03 ETH</span>
+											</div>
+											<div class="price-tranding__column">
+												<h4 class="price-tranding__title">Highest Bid</h4>
+												<span class="price-tranding__value">0.07 ETH</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<!-- Слайд -->
+								<div class="tranding__slide swiper-slide slide-tranding">
+									<div class="slide-tranding__image-ibg">
+										<picture><source srcset="img/tranding-nft/04.webp" type="image/webp"><img src="img/tranding-nft/04.png" alt="Photo" /></picture>
+									</div>
+									<div class="slide-tranding__body">
+										<h3 class="slide-tranding__title">Kive Boy</h3>
+										<div class="slide-tranding__description">#QA5200 The Kive</div>
+										<div class="slide-tranding__price price-tranding">
+											<div class="price-tranding__column">
+												<h4 class="price-tranding__title">Price</h4>
+												<span class="price-tranding__value">0.03 ETH</span>
+											</div>
+											<div class="price-tranding__column">
+												<h4 class="price-tranding__title">Highest Bid</h4>
+												<span class="price-tranding__value">0.07 ETH</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<!-- Слайд -->
+								<div class="tranding__slide swiper-slide slide-tranding">
+									<div class="slide-tranding__image-ibg">
+										<picture><source srcset="img/tranding-nft/03.webp" type="image/webp"><img src="img/tranding-nft/03.png" alt="Photo" /></picture>
+									</div>
+									<div class="slide-tranding__body">
+										<h3 class="slide-tranding__title">Kive Boy</h3>
+										<div class="slide-tranding__description">#QA5200 The Kive</div>
+										<div class="slide-tranding__price price-tranding">
+											<div class="price-tranding__column">
+												<h4 class="price-tranding__title">Price</h4>
+												<span class="price-tranding__value">0.03 ETH</span>
+											</div>
+											<div class="price-tranding__column">
+												<h4 class="price-tranding__title">Highest Bid</h4>
+												<span class="price-tranding__value">0.07 ETH</span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<!-- Якщо потрібна пагінація -->
+							<!-- Якщо потрібна навігація (ліворуч/праворуч) -->
+						</div>
+						<div class="swiper-pagination tranding__pagination"></div>
+						<div class="tranding__buttons">
+							<button type="button" class="tranding__arrow tranding__arrow--prew _icon-arrow"></button>
+							<button type="button" class="tranding__arrow tranding__arrow--next _icon-arrow"></button>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="page__insights insights">
+				<div class="insights__container">
+					<h2 class="insights__title">Insights</h2>
+					<div class="insights__items items-insights">
+						<article class="items-insight__item item-insights">
+							<div class="item-insights__image-ibg">
+								<picture><source srcset="img/insights/01.webp" type="image/webp"><img src="img/insights/01.png" alt="image" /></picture>
+							</div>
+							<div class="item-insights__body">
+								<div class="item-insights__info">
+									<a href="" class="item-insights__chapter">TECHNOLOGY</a>
+									<div class="item-insights__body-info">
+										<a href="" class="item-insights__name">John Doe</a>
+										<a href="" class="item-insights__date">19 Jan 2022</a>
+									</div>
+								</div>
+								<h3 class="item-insights__title">Gesture for the people and the culture</h3>
+								<a href="" class="item-insights__link _icon-read-more">Read More</a>
+							</div>
+						</article>
+						<article class="items-insight__item item-insights">
+							<div class="item-insights__image-ibg">
+								<picture><source srcset="img/insights/02.webp" type="image/webp"><img src="img/insights/02.png" alt="image" /></picture>
+							</div>
+							<div class="item-insights__body">
+								<div class="item-insights__info">
+									<a href="" class="item-insights__chapter">Webiner</a>
+									<div class="item-insights__body-info">
+										<a href="" class="item-insights__name">John Doe</a>
+										<a href="" class="item-insights__date">19 Jan 2022</a>
+									</div>
+								</div>
+								<h3 class="item-insights__title">
+									Mostly metaverse is only as good as its tools and it is totally true.
+								</h3>
+								<a href="" class="item-insights__link _icon-read-more">Read More</a>
+							</div>
+						</article>
+						<article class="items-insight__item item-insights">
+							<div class="item-insights__image-ibg">
+								<picture><source srcset="img/insights/03.webp" type="image/webp"><img src="img/insights/03.png" alt="image" /></picture>
+							</div>
+							<div class="item-insights__body">
+								<div class="item-insights__info">
+									<a href="" class="item-insights__chapter">Crypto Currency</a>
+									<div class="item-insights__body-info">
+										<a href="" class="item-insights__name">John Doe</a>
+										<a href="" class="item-insights__date">19 Jan 2022</a>
+									</div>
+								</div>
+								<h3 class="item-insights__title">
+									Crypto business is only as good as its tools and it is totally true.
+								</h3>
+								<a href="" class="item-insights__link _icon-read-more">Read More</a>
+							</div>
+						</article>
+					</div>
+				</div>
+			</section>
+
 			<div class="page__cta cta">
 				<div class="cta__container">
 					<div class="cta__body">
@@ -265,7 +478,9 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20230120002240"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js?_v=20230122224402"></script>
+	<script src="js/app.min.js?_v=20230122224402"></script>
+
 </body>
 
 </html>
