--- a/nft-market/index.html
+++ b/nft-market/index.html
@@ -2,20 +2,21 @@
 <html>
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Верстка «nft-market»</title>
 </head>
 
 <body>
 	<div class="rootpage">
 		<h1>Верстка «nft-market»</h1>
-		<div class="rootpage__info">
-			Опис проєкту
-		</div>
+		<div class="rootpage__info">Опис проєкту</div>
 		<h2>Готові сторінки:</h2>
 		<ol class="rootpage__list">
 			<li><a target="_blank" href="home.html">Головна</a></li>
+			<li><a target="_blank" href="connect.html">Connect Wallet</a></li>
+			<li><a target="_blank" href="create-account.html">Create Account</a></li>
+			<li><a target="_blank" href="artist.html">Artist Page</a></li>
 		</ol>
 		<h2>Попапи:</h2>
 		<ol class="rootpage__list">
@@ -36,7 +37,7 @@
 </body>
 <style>
 	@charset "UTF-8";
-	@import url("https://fonts.googleapis.com/css?family=Montserrat:regular,700&display=swap");
+	@import url('https://fonts.googleapis.com/css?family=Montserrat:regular,700&display=swap');
 
 	*,
 	*::before,
@@ -67,7 +68,7 @@
 
 	a {
 		text-decoration: underline;
-		color: #ebe691
+		color: #ebe691;
 	}
 
 	a:visited {
@@ -163,7 +164,6 @@
 
 	.rootpage__contacts {
 		background: #32b5a4;
-
 	}
 
 	.rootpage__contacts a {
