I have added product page

--- a/matao/home.html
+++ b/matao/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221226153843">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230701154741">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -111,6 +111,7 @@
 				</div>
 				<!-- /.main-slider__container -->
 			</section>
+
 			<!-- ! Discover-now -->
 			<div data-watch data-watch-threshold="0.3" class="discover-now">
 				<div class="discover-now__container">
@@ -145,6 +146,7 @@
 				<!-- /.discover-now__container -->
 			</div>
 			<!-- discover-now -->
+
 			<!--  Monthly -->
 			<section class="page__monthly-deals monthly-deals">
 				<div class="monthly-deals__container">
@@ -233,6 +235,7 @@
 				</div>
 				<!-- /.monthly-deals__container -->
 			</section>
+
 			<!-- RECENT-NEWS -->
 			<section class="page__recent-new recent-news">
 				<div class="recent-news__container">
@@ -251,7 +254,149 @@
 				</div>
 				<!-- /.recent__container -->
 			</section>
-			<section class="page__instagram"></section>
+
+			<!-- collections -->
+			<section class="page__collections collections">
+				<div class="collections__container">
+					<div class="collections__body">
+						<div class="collections__column">
+							<h3 class="collections__title title title--small">Maple Series</h3>
+							<div id="cat-01" class="collections__items">
+
+							</div>
+						</div>
+						<!-- /.collections__column -->
+						<div class="collections__column">
+							<h3 class="collections__title title title--small">Ebony Series</h3>
+							<div id="cat-02" class="collections__items">
+
+							</div>
+						</div>
+						<!-- /.collections__column -->
+						<div class="collections__column">
+							<h3 class="collections__title title title--small">Featured</h3>
+							<div id="cat-03" class="collections__items">
+
+							</div>
+						</div>
+						<!-- /.collections__column -->
+					</div>
+					<!-- /.collections__body -->
+					<div class="collections__footer footer-collections">
+						<div class="footer-collections__body">
+							<button class="footer-collections__button border-button" type="button">See More</button>
+						</div>
+
+					</div>
+					<!-- /.collections__footer -->
+				</div>
+				<!-- /.collections__container -->
+			</section>
+
+			<!-- Testimonials -->
+			<section class="page__testimonials testimonials">
+				<div class="testimonials__container">
+					<h2 class="testimonials__title title title--semibold">Testimonials</h2>
+
+					<div class="testimonials__slider swiper">
+						<div class="testimonials__wrapper swiper-wrapper">
+							<div class="testimonials__slide slide-testimonial swiper-slide">
+								<div class="slide-testimonial__image">
+									<picture><source srcset="img/testimonials/01.webp" type="image/webp"><img src="img/testimonials/01.jpg" alt="Image"></picture>
+								</div>
+								<div class="slide-testimonial__content">
+									<h4 class="slide-testimonial__name">Gita Savitri</h4>
+									<p class="slide-testimonial__info">Content Creator/Influencer</p>
+								</div>
+							</div>
+							<div class="testimonials__slide slide-testimonial swiper-slide">
+								<div class="slide-testimonial__image">
+									<picture><source srcset="img/testimonials/01.webp" type="image/webp"><img src="img/testimonials/01.jpg" alt="Image"></picture>
+								</div>
+								<div class="slide-testimonial__content">
+									<h4 class="slide-testimonial__name">Gita Savitri</h4>
+									<p class="slide-testimonial__info">Content Creator/Influencer</p>
+								</div>
+							</div>
+						</div>
+						<div class="testimonials__arrows">
+							<button class="testimonials__arrow testimonials__arrow--left _icon-arrow-slider-long" type="button"></button>
+							<button class="testimonials__arrow testimonials__arrow--right _icon-arrow-slider-long" type="button"></button>
+						</div>
+					</div>
+				</div>
+				<!-- /.testimonials__container -->
+			</section>
+
+			<section class="page__insta insta">
+				<div class="insta__container">
+					<h2 class="insta__title title">Instagram</h2>
+					<div data-gallery class="insta__items">
+						<a href="img/insta/01-big.jpg" class="insta__item">
+							<div class="insta__image-ibg">
+								<picture><source srcset="img/insta/01.webp" type="image/webp"><img src="img/insta/01.jpg" alt="Image"></picture>
+							</div>
+						</a>
+						<a href="img/insta/02-big.jpg" class="insta__item">
+							<div class="insta__image-ibg">
+								<picture><source srcset="img/insta/02.webp" type="image/webp"><img src="img/insta/02.jpg" alt="Image"></picture>
+							</div>
+						</a>
+						<a href="img/insta/03-big.jpg" class="insta__item">
+							<div class="insta__image-ibg">
+								<picture><source srcset="img/insta/03.webp" type="image/webp"><img src="img/insta/03.jpg" alt="Image"></picture>
+							</div>
+						</a>
+						<a href="img/insta/04-big.jpg" class="insta__item">
+							<div class="insta__image-ibg">
+								<picture><source srcset="img/insta/04.webp" type="image/webp"><img src="img/insta/04.jpg" alt="Image"></picture>
+							</div>
+						</a>
+						<a href="img/insta/05-big.jpg" class="insta__item">
+							<div class="insta__image-ibg">
+								<picture><source srcset="img/insta/05.webp" type="image/webp"><img src="img/insta/05.jpg" alt="Image"></picture>
+							</div>
+						</a>
+					</div>
+				</div>
+				<!-- /.insta__container -->
+			</section>
+
+			<section class="page__clients clients">
+				<div class="clients__container">
+					<div class="clients__item">
+						<picture><source srcset="img/clients/01.webp" type="image/webp"><img src="img/clients/01.png" alt="Image"></picture>
+					</div>
+					<div class="clients__item">
+						<picture><source srcset="img/clients/02.webp" type="image/webp"><img src="img/clients/02.png" alt="Image"></picture>
+					</div>
+					<div class="clients__item">
+						<picture><source srcset="img/clients/03.webp" type="image/webp"><img src="img/clients/03.png" alt="Image"></picture>
+					</div>
+					<div class="clients__item">
+						<picture><source srcset="img/clients/04.webp" type="image/webp"><img src="img/clients/04.png" alt="Image"></picture>
+					</div>
+					<div class="clients__item">
+						<picture><source srcset="img/clients/05.webp" type="image/webp"><img src="img/clients/05.png" alt="Image"></picture>
+					</div>
+					<div class="clients__item">
+						<picture><source srcset="img/clients/06.webp" type="image/webp"><img src="img/clients/06.png" alt="Image"></picture>
+					</div>
+					<div class="clients__item">
+						<picture><source srcset="img/clients/07.webp" type="image/webp"><img src="img/clients/07.png" alt="Image"></picture>
+					</div>
+					<div class="clients__item">
+						<picture><source srcset="img/clients/08.webp" type="image/webp"><img src="img/clients/08.png" alt="Image"></picture>
+					</div>
+					<div class="clients__item">
+						<picture><source srcset="img/clients/09.webp" type="image/webp"><img src="img/clients/09.png" alt="Image"></picture>
+					</div>
+					<div class="clients__item">
+						<picture><source srcset="img/clients/10.webp" type="image/webp"><img src="img/clients/10.png" alt="Image"></picture>
+					</div>
+				</div>
+				<!-- /.clients__container -->
+			</section>
 		</main>
 		<footer data-spollers="768,max" class="footer">
 			<div class="footer__container">
@@ -382,7 +527,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20221226153843"></script>
+	<script src="js/app.min.js?_v=20230701154741"></script>
 </body>
 
 </html>
